@@ -5,12 +5,12 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import org.una.programmingIII.WikiPets.Mapper.FeedingScheduleMapper;
+import org.una.programmingIII.WikiPets.Mapper.GenericMapper;
+import org.una.programmingIII.WikiPets.Mapper.GenericMapperFactory;
 import org.una.programmingIII.WikiPets.Model.FeedingSchedule;
-import org.una.programmingIII.WikiPets.Dto.FeedingScheduleDto;
+import org.una.programmingIII.WikiPets.Model.FeedingScheduleDto;
 import org.una.programmingIII.WikiPets.Repository.FeedingScheduleRepository;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -21,30 +21,46 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.*;
 
-public class FeedingScheduleServiceImplementationTest {
+public class FeedingScheduleServiceTest {
 
     @Mock
     private FeedingScheduleRepository feedingScheduleRepository;
 
     @Mock
-    private FeedingScheduleMapper feedingScheduleMapper;
+    private GenericMapperFactory mapperFactory;
+
+    @Mock
+    private GenericMapper<FeedingSchedule, FeedingScheduleDto> feedingScheduleMapper;
 
     @InjectMocks
-    private FeedingScheduleServiceImplementation feedingScheduleServiceImplementation;
+    private FeedingScheduleService feedingScheduleService;
+
+    private FeedingSchedule feedingSchedule;
+    private FeedingScheduleDto feedingScheduleDto;
 
     @BeforeEach
     public void setup() {
+        feedingSchedule = new FeedingSchedule();
+        feedingSchedule.setId(1L);
+        feedingSchedule.setAgeGroup("Kitten");
+        feedingSchedule.setFeedingTimes("Three times a day");
+
+        feedingScheduleDto = new FeedingScheduleDto();
+        feedingScheduleDto.setId(1L);
+        feedingScheduleDto.setAgeGroup("Kitten");
+        feedingScheduleDto.setFeedingTimes("Three times a day");
+
         MockitoAnnotations.initMocks(this);
+        when(mapperFactory.createMapper(FeedingSchedule.class, FeedingScheduleDto.class)).thenReturn(feedingScheduleMapper);
+        when(feedingScheduleMapper.convertToDTO(feedingSchedule)).thenReturn(feedingScheduleDto);
+        when(feedingScheduleMapper.convertToEntity(feedingScheduleDto)).thenReturn(feedingSchedule);
+        feedingScheduleService = new FeedingScheduleService(feedingScheduleRepository, mapperFactory);
     }
 
     @Test
     public void getAllFeedingSchedulesTest() {
-        FeedingSchedule feedingSchedule = new FeedingSchedule();
-        when(feedingScheduleRepository.findAll()).thenReturn(Arrays.asList(feedingSchedule));
-        when(feedingScheduleMapper.toFeedingScheduleDto(any(FeedingSchedule.class)))
-                .thenReturn(new FeedingScheduleDto());
-
-        List<FeedingScheduleDto> feedingScheduleDtos = feedingScheduleServiceImplementation.getAllFeedingSchedules();
+        when(feedingScheduleRepository.findAll()).thenReturn(List.of(feedingSchedule));
+        List<FeedingScheduleDto> feedingScheduleDtos = feedingScheduleService.getAllFeedingSchedules();
 
         assertNotNull(feedingScheduleDtos);
         assertEquals(1, feedingScheduleDtos.size());
@@ -53,61 +69,43 @@ public class FeedingScheduleServiceImplementationTest {
 
     @Test
     public void getFeedingScheduleByIdTest() {
-        FeedingSchedule feedingSchedule = new FeedingSchedule();
         when(feedingScheduleRepository.findById(anyLong())).thenReturn(Optional.of(feedingSchedule));
-        when(feedingScheduleMapper.toFeedingScheduleDto(any(FeedingSchedule.class)))
-                .thenReturn(new FeedingScheduleDto());
-
-        FeedingScheduleDto feedingScheduleDto = feedingScheduleServiceImplementation.getFeedingScheduleById(1L);
-
-        assertNotNull(feedingScheduleDto);
+        FeedingScheduleDto result = feedingScheduleService.getFeedingScheduleById(1L);
+        assertNotNull(result);
         verify(feedingScheduleRepository, times(1)).findById(anyLong());
     }
 
     @Test
     public void getFeedingScheduleByIdNotFoundTest() {
         when(feedingScheduleRepository.findById(anyLong())).thenReturn(Optional.empty());
-
-        assertThrows(RuntimeException.class, () -> feedingScheduleServiceImplementation.getFeedingScheduleById(1L));
+        assertThrows(RuntimeException.class, () -> feedingScheduleService.getFeedingScheduleById(1L));
     }
 
     @Test
     public void createFeedingScheduleTest() {
-        FeedingSchedule feedingSchedule = new FeedingSchedule();
-        FeedingScheduleDto feedingScheduleDto = new FeedingScheduleDto();
-
         when(feedingScheduleRepository.save(any(FeedingSchedule.class))).thenReturn(feedingSchedule);
-        when(feedingScheduleMapper.toFeedingScheduleDto(any(FeedingSchedule.class))).thenReturn(feedingScheduleDto);
-        when(feedingScheduleMapper.toFeedingSchedule(any(FeedingScheduleDto.class))).thenReturn(feedingSchedule);
-
-        FeedingScheduleDto createdFeedingScheduleDto = feedingScheduleServiceImplementation.createFeedingSchedule(feedingScheduleDto);
-
+        FeedingScheduleDto createdFeedingScheduleDto = feedingScheduleService.createFeedingSchedule(feedingScheduleDto);
+        assertEquals(feedingScheduleDto.getId(), feedingSchedule.getId());
         assertNotNull(createdFeedingScheduleDto);
         verify(feedingScheduleRepository, times(1)).save(any(FeedingSchedule.class));
     }
 
     @Test
     public void updateFeedingScheduleTest() {
-        FeedingSchedule feedingSchedule = new FeedingSchedule();
-        FeedingScheduleDto feedingScheduleDto = new FeedingScheduleDto();
-
         when(feedingScheduleRepository.save(any(FeedingSchedule.class))).thenReturn(feedingSchedule);
-        when(feedingScheduleMapper.toFeedingScheduleDto(any(FeedingSchedule.class))).thenReturn(feedingScheduleDto);
-        when(feedingScheduleMapper.toFeedingSchedule(any(FeedingScheduleDto.class))).thenReturn(feedingSchedule);
-
-        FeedingScheduleDto updatedFeedingScheduleDto = feedingScheduleServiceImplementation.updateFeedingSchedule(feedingScheduleDto);
-
-        assertNotNull(updatedFeedingScheduleDto);
+        FeedingScheduleDto result = feedingScheduleService.updateFeedingSchedule1(feedingScheduleDto);
+        assertEquals(feedingSchedule.getId(), feedingScheduleDto.getId());
+        assertEquals(feedingSchedule.getFeedingTimes(), feedingScheduleDto.getFeedingTimes());
+        assertNotNull(result);
         verify(feedingScheduleRepository, times(1)).save(any(FeedingSchedule.class));
     }
 
     @Test
     public void deleteFeedingScheduleTest() {
-        FeedingSchedule feedingSchedule = new FeedingSchedule();
         when(feedingScheduleRepository.findById(anyLong())).thenReturn(Optional.of(feedingSchedule));
         doNothing().when(feedingScheduleRepository).delete(any(FeedingSchedule.class));
 
-        feedingScheduleServiceImplementation.deleteFeedingSchedule(1L);
+        feedingScheduleService.deleteFeedingSchedule(1L);
 
         verify(feedingScheduleRepository, times(1)).findById(anyLong());
         verify(feedingScheduleRepository, times(1)).delete(any(FeedingSchedule.class));
@@ -116,7 +114,6 @@ public class FeedingScheduleServiceImplementationTest {
     @Test
     public void deleteFeedingScheduleNotFoundTest() {
         when(feedingScheduleRepository.findById(anyLong())).thenReturn(Optional.empty());
-
-        assertThrows(RuntimeException.class, () -> feedingScheduleServiceImplementation.deleteFeedingSchedule(1L));
+        assertThrows(RuntimeException.class, () -> feedingScheduleService.deleteFeedingSchedule(1L));
     }
 }
